// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography > matches snapshot for asChild composition 1`] = `
<DocumentFragment>
  <a
    class="inner typography link widthSmall outer"
    href="/quiz/create"
  >
    Create your own quiz
  </a>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for extraLargeTitle variant 1`] = `
<DocumentFragment>
  <h1
    class="typography extraLargeTitle widthMedium"
  >
    Let’s play
  </h1>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for link variant 1`] = `
<DocumentFragment>
  <a
    class="typography link widthFull"
    href="/profile"
  >
    Profile
  </a>
</DocumentFragment>
`;

exports[`Typography > matches snapshot for title variant 1`] = `
<DocumentFragment>
  <h1
    class="typography title widthSmall"
  >
    Leaderboard
  </h1>
</DocumentFragment>
`;
